--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <img class="photo" src="../png-clipart-dinosaur-dinosaur.png" alt="">
+    <img class="photo" src="./png-clipart-dinosaur-dinosaur.png" alt="">
     <div class="box"></div>
 </body>
 </html>
